--- a/CW/week13/6.html
+++ b/CW/week13/6.html
@@ -5,6 +5,15 @@
     <title>Table</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <style>
+    .feature {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
+    width: 4rem;
+    font-size: 2rem;}
+  </style>
 </head>
 <body class="mx-5">
 <h2 style="text-align: center;" class="botitle">Table Border </h2>
