chore: link 3.js to html

--- a/CW/week19/js/1..html
+++ b/CW/week19/js/1..html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="1.js"></script>
     <script src="2.js"></script>
+    <script src="3.js"></script>
 </head>
 <body>
 
