--- a/CW/week19/js/1..html
+++ b/CW/week19/js/1..html
@@ -6,8 +6,18 @@
     <script src="1.js"></script>
     <script src="2.js"></script>
     <script src="3.js"></script>
+
+    <style>
+        #test{
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
+<button id="btn1" type="button" class="btn-primary">Test</button>
+<p id="test">Hello word</p>
 </body>
+
+<script src="4.js"></script>
 </html>
